# elza.fun

./: .gitignore
.github/workflows/: deploy.yml
checkout/: package-lock.json  package.json
checkout/src/app/: globals.css  layout.tsx  page.tsx
checkout/src/lib/: api.ts
programs/: Anchor.toml  Cargo.toml
programs/programs/receipt-program/: Cargo.toml
programs/programs/receipt-program/src/: lib.rs
programs/programs/subscription-program/: Cargo.toml
programs/programs/subscription-program/src/: lib.rs
programs/tests/: elza-programs.ts
server/: DATABASE.md  Dockerfile  docker-compose.db-only.yml  docker-compose.yml  env.example  package-lock.json  package.json  tsconfig.json
server/scripts/: db-logs.sh  db-reset.sh  db-start.sh  db-status.sh  db-stop.sh
server/src/: app.controller.ts  app.module.ts  app.service.ts  main.ts
server/src/auth/: auth.controller.ts  auth.module.ts  auth.service.ts
server/src/checkout/: checkout.controller.ts  checkout.module.ts  checkout.service.ts
server/src/customers/: customers.controller.ts  customers.module.ts  customers.service.ts
server/src/dashboard/: dashboard.controller.ts  dashboard.module.ts  dashboard.service.ts
server/src/email/: email.controller.ts  email.module.ts  email.service.ts
server/src/merchants/: merchants.controller.ts  merchants.module.ts  merchants.service.ts
server/src/products/: products.controller.ts  products.module.ts  products.service.ts
server/src/receipts/: receipts.controller.ts  receipts.module.ts  receipts.service.ts
web/: package-lock.json  package.json
(+71 files in other folders)
