[package]
name = "receipt-program"
version = "0.1.0"
description = "Solana NFT receipt program"
edition = "2021"

[lib]
crate-type = ["cdylib", "lib"]
name = "receipt_program"

[features]
no-entrypoint = []
no-idl = []
no-log-ix-name = []
cpi = ["no-entrypoint"]
default = []

[dependencies]
anchor-lang = "0.30.1"
anchor-spl = "0.30.1"
mpl-token-metadata = "3.2.1"
solana-program = "~1.18.0"
