[package]
name = "subscription-program"
version = "0.1.0"
description = "Solana subscription management program"
edition = "2021"

[lib]
crate-type = ["cdylib", "lib"]
name = "subscription_program"

[features]
no-entrypoint = []
no-idl = []
no-log-ix-name = []
cpi = ["no-entrypoint"]
default = []

[dependencies]
anchor-lang = "0.30.1"
anchor-spl = "0.30.1"
solana-program = "~1.18.0"
